--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -515,6 +519,9 @@
         z-index: 5;
     }
 </style>
+</head>
+<body>
+    
 <!-- Noise Texture -->
 <div class="noise"></div>
 
@@ -1150,5 +1157,7 @@
         }, 100);
     }
 </script>
+</body>
+</html>
 </body>
 </html>
