--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
             <div class="max-w-4xl mx-auto glass-card p-8 md:p-12 reveal" style="animation-delay: 0.2s">
                 <div class="flex flex-col items-center">
                     <h3 class="text-2xl font-bold mb-6 text-center">¿Interesado en trabajar juntos?</h3>
-                    <p class="text-gray-300 mb-8 text-center max-w-2xl">Estoy disponible para nuevos proyectos de comunicación digital y creación de contenidos. Contáctame para discutir cómo puedo ayudarte.</p>
+                    <p class="text-gray-300 mb-8 text-center max-w-2xl">Estoy disponible para nuevos proyectos de comunicación digital y creación de contenidos. Contáctame y nos ponemos a trabajar!</p>
                     
                     <div class="contact-info">
                         <div class="contact-item">
